# MicroservicesWithAWS_Lambda_Authorizer_Python

./: authorizer.py  pyproject.toml
