[tool.poetry]
name = "microserviceswithaws-lambda-authorizer-python"
version = "0.1.0"
description = ""
authors = ["Luis Guilherme de Souza Munhoz <luisguilherme.sm@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jwt = "^1.3.1"
boto3 = "^1.28.78"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"
flake8-pyproject = "^1.2.3"
black = "^23.10.1"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
files=["authorizer.py"]

[tool.flake8]
max-line-length = 89

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
